--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     Quae voluptates vero incidunt dolores dolor ab, nostrum hic corporis vel voluptas dignissimos minus et voluptatibus harum ipsam inventore. Assumenda, explicabo magnam repellendus possimus hic illo accusantium asperiores incidunt doloremque!
     Ullam, eum consequatur. Corporis architecto voluptatibus pariatur est autem suscipit illum officiis doloribus nemo quis enim perferendis aut harum nisi, ipsa minima vitae possimus necessitatibus quasi, amet nostrum provident velit.</div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/scrollama"></script>
     <script src="scripts/script.js" ></script>
 </body>
 </html>
